--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -32,7 +32,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center">
                         <div class="social">
-                            <button type="button" id="btnGoogle" class="google" data-toggle="tooltip" title="Inicia Sesión con Google"> <i class="fab fa-google-plus-square"></i> </button>
+                            <button type="button" id="btnGoogle" class="btn btn-googleplus" data-toggle="tooltip" title="Inicia Sesión con Google"> <i aria-hidden="true" class="fab fa-google-plus-g"></i> </button>
                         </div>
                     </div>
                 </div>
