--- a/src/styles.css
+++ b/src/styles.css
@@ -6,13 +6,40 @@
     cursor: pointer;
 }
 
-.google {
-    cursor: pointer;
-    background: red;
-    border: none;
-    border-radius: 5px;
-}
-
 .w150 {
     width: 150px;
+}
+
+.editar {
+    margin-right: 10px;
+}
+
+.anteriores {
+    margin-right: 10px;
+}
+
+.labelGoogle {
+    margin-right: 5px;
+}
+
+.w-70 {
+    width: 70px;
+}
+
+.img-50 {
+    width: 50px;
+}
+
+.fondo-negro {
+    background-color: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+}
+
+.oculto {
+    display: none;
 }
